# project_fur_felis_catus_cnv_analysis

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.public  README.md  dependencies.R  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
cicd_scripts/: build_package_and_publish.sh
src/fur_cnvkit/: __main__.py  calculate_mad.py  cli.py  constants.py  generate_cnvkit_static_files.py  generate_copy_number_heatmap_plot.R  generate_copy_number_reference.py  generate_genemetrics_study_summary.py  generate_oncoprint.py  normal_vs_normal.py  run_cnvkit_copy_number_calling_pipeline.py
src/fur_cnvkit/parameters/: parameter_file_template.json
src/fur_cnvkit/utils/: cnvkit_utils.py  file_format_checker.py  fur_utils.py  logging_utils.py
src/utils/: cnvkit_utils.py  file_format_checker.py  fur_utils.py
tests/: conftest.py
tests/integration/: test_cli.py  test_cnvkit.py  test_import.py
tests/mocks/: example_sample_metadata.xlsx  mock_files.py
tests/unit/fur_cnvkit/: test_generate_cnvkit_static_files.py
tests/unit/fur_cnvkit/utils/: test_cnvkit_utils.py  test_file_format_checker.py  test_fur_utils.py
tests/unit/utils/: test_cnvkit_utils.py  test_file_format_checker.py  test_fur_utils.py
